k8s-student-sync/k8s/4-fe-deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stu-mnm-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stu-mnm-fe
  template:
    metadata:
      labels:
        app: stu-mnm-fe
    spec:
      containers:
      - name: stu-mnm-fe
        image: nasirnjs/stumnmfe:0.0.5
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: stu-mnm-fe
spec:
  selector:
    app: stu-mnm-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
