k8s-student-sync/k8s/domain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stu-mnm-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cloudopsschool.com
    secretName: letsencrypt-prod
  rules:
  - host: cloudopsschool.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: stu-mnm-fe
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /be/?(.*)
        backend:
          service:
            name: stu-mnm-be
            port:
              number: 80
